Fix Vercel build configuration
- Simplify vercel.json to use @vercel/static-build
- Add vercel-build script to package.json for Vercel deployment
- Fix routing for SPA functionality
- Ensure proper build process from App1_6 directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-  "name": "mlb-xr-branding-guide",
   "version": 2,
-  "buildCommand": "cd App1_6 && npm ci && npm run build",
-  "outputDirectory": "App1_6/dist",
-  "installCommand": "cd App1_6 && npm ci",
-  "framework": "vite",
   "builds": [
     {
       "src": "App1_6/package.json",
@@ -17,7 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/App1_6/dist/index.html"
+      "dest": "App1_6/dist/index.html"
     }
   ]
 }
