--- a/App1_6/package.json
+++ b/App1_6/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "vercel-build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "electron:start": "npm run build && electron electron-main.cjs",
