Move app to root level for Vercel deployment
- Copy all App1_6 files to root directory for easier Vercel deployment
- Simplify vercel.json configuration
- Remove subdirectory complexity that was causing build issues
- Keep App1_6 directory as backup/reference

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,12 @@
 {
-  "version": 2,
-  "builds": [
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "rewrites": [
     {
-      "src": "App1_6/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "App1_6/dist/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
