Fix vercel.json: use rewrites instead of routes for SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,8 @@
 {
-  "version": 2,
-  "name": "mlb-xr-branding-guide",
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  }
+  ]
 }
