fix: Move docs to public folder to resolve styling issues
- Move docs folder from /docs to /public/docs to serve as static files
- Fix Vite injecting React dev scripts into documentation HTML
- Update documentation links in App.jsx to use /docs/index.html
- Update sync-readme.js paths to work with new folder structure
- Add docs:sync npm script for easy documentation updates
- Ensure all CSS, JS, and font files load correctly without interference
- Documentation site now displays with full styling and functionality

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "vercel-build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:sync": "node public/docs/sync-readme.js"
   },
   "dependencies": {
     "papaparse": "^5.5.3",
