--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docs:sync": "node public/docs/sync-readme.js"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
